<resources>
    <string name="app_name">Ejercicio4RadioButton</string>
    <string name="radio1">LUNES</string>
    <string name="radio2">MARTES</string>
    <string name="radio3">MIÉRCOLES</string>
    <string name="radio4">JUEVES</string>
    <string name="radio5">VIERNES</string>
    <string name="radio6">SÁBADO</string>
    <string name="radio7">DOMINGO</string>
    <string name="TEXTO">CAMBIAR TEXTO</string>
</resources>